keybindings: always acknowledge events to the X server

https://bugzilla.gnome.org/show_bug.cgi?id=666101